--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Emsk zby</title>
+    <title>Emad</title>
     <style>
       img {
         width: 100px;
@@ -12,7 +12,7 @@
       .Emad {
         font-weight: bold;
       }
-      em{
+      em {
         color: red;
         font-size: large;
       }
@@ -20,11 +20,10 @@
   </head>
   <body>
     <img src="images/WhatsApp Image 2021-10-31 at 1.20.19 AM.jpeg" alt="" />
-<h1> omdaaaa</h1>
-<h2>omdaaaa</h2>
-<h3>omdaaaa</h3>
+    <h1>omdaaaa</h1>
+    <h2>omdaaaa</h2>
+    <h3>omdaaaa</h3>
     <p class="Emad">@Emad.com</p>
-    <p>i love to teach u fucking <em>Hard!</em>
-    </p>
+    <p>Emad Medhat Mohamed <em>Omda!</em></p>
   </body>
 </html>
