--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
   </head>
   <body>
     <img src="images/WhatsApp Image 2021-10-31 at 1.20.19 AM.jpeg" alt="" />
-    <h1>omdaaaa</h1>
-    <h2>omdaaaa</h2>
-    <h3>omdaaaa</h3>
-    <p class="Emad">@Emad.com</p>
+    <h1>Ahmed</h1>
+    <h2>Abo 3mo</h2>
+    <h3>Aboo 3moo</h3>
+    <p class="Emad">@Abo 3moo</p>
     <p>Emad Medhat Mohamed <em>Omda!</em></p>
   </body>
 </html>
